<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/staff"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_selector"
        android:text="@string/staff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/restaurant"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/restaurant"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dish"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/dish"
        android:textSize="25sp" />

</LinearLayout>